zomato-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zomato-app
  namespace: zomato-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zomato-app
  template:
    metadata:
      labels:
        app: zomato-app
    spec:
      containers:
        - name: zomato-app
          image: greekgod659/zomato
          ports:
          - containerPort: 3000
