zomato-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zomato-app-service
  namespace: zomato-app
spec:
  selector:
    app: zomato-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
